[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyc_utils"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = ["matplotlib",
                "numpy",
                "scipy",
                "trio",
                "casadi",
                "mosek"]
description = "Repository for storing scripts, classes and functions useful for aimotionlab cf drones."
readme = "readme.md"
