[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyc_utils"
version = "1.2.0"
requires-python = ">=3.9"
dependencies = ["matplotlib",
                "numpy",
                "scipy",
                "trio",
                "casadi",
                "mosek",
                "pyledctrl @ git+https://github.com/skybrush-io/pyledctrl.git"]
description = "Repository for storing scripts, classes and functions useful for aimotionlab cf drones."
readme = "readme.md"
